--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Index</title>
   </head>
   <body>
-    <h1>Applied Idiocy</h1>
+    <h1 style="font-size=100px;">Applied Idiocy</h1>
     <p title="I don't understand">
       If you stare too long at this page, it will not stare back at you
     </p>
@@ -17,6 +17,10 @@
       Stock images can be<br>
       very strange indeed
       </p>
+      <pre>
+      Shall I compare thee to a summer's day? 
+      How about a sand storm? They're also coarse and disruptive  
+      </pre>
     </p>
   </body>
 </html>
