--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <html lang = "en-US">
     <title>Index</title>
   </head>
-  <body>
-    <h1 style="font-size=100px;">Applied Idiocy</h1>
+  <body style = "background-color:powderblue;">
+    <h1 style = "font-size:150%;">Applied Idiocy</h1>
     <p title="I don't understand">
       If you stare too long at this page, it will not stare back at you
     </p>
