--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Index</title>
   </head>
   <body style = "background-color:powderblue;">
-    <h1 style = "font-size:300%;">Applied Idiocy</h1>
+    <h1  style = "font-size:300%; text-align:center;">
+      <b>Applied Idiocy<b>
+    </h1>
     <p title="I don't understand">
       If you stare too long at this page, it will not stare back at you
     </p>
