--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style = "background-color:powderblue;">
     <h1  style = "font-size:300%; text-align:center;">
-      <b>Applied Idiocy<b>
+      <ins>Applied Idiocy</ins>
     </h1>
     <p title="I don't understand">
       If you stare too long at this page, it will not stare back at you
