--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       very strange indeed
       </p>
       <pre>
-      Shall I compare thee to a summer's day? 
+      <ins>Shall I compare thee to a summer's day?</ins> 
       How about a sand storm? They're also coarse and disruptive  
       </pre>
     </p>
