--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Index</title>
   </head>
   <body style = "background-color:powderblue;">
-    <h1  style = "font-size:300%; text-align:center;">
+    <h1  style = "text-align:center;">
       <ins>Applied Idiocy</ins>
     </h1>
-    <p title="I don't understand">
+    <p title="I don't understand" style = "text-align:center;">
       If you stare too long at this page, it will not stare back at you
     </p>
     <a href="https://www.nytimes.com/">Click here!</a>
