--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-
+    
     <html lang = "en-US">
-
+    <link rel="stylesheet" type ="text/css" href="mystyle.css"> 
     <title>Index</title>
   </head>
 
