--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
       How about a sand storm? They're also coarse and disruptive  
       </pre>
     </p>
+    
+      <table>
+      <tr>
+        <th>Name</th>
+        <th>Number</th>
+      </tr>
+      <tr>
+        <td>Robert</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>Gollum</td>
+        <td>23</td>
+      </tr>
+      </table>
   
   </body>
 
