--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <html lang = "en-US">
-    <link rel="stylesheet" type ="text/css" href="E:\futurewitness.github.io\mystyle.css"> 
+    <link rel="stylesheet" type ="text/css" href="mystyle.css"> 
     <title>Index</title>
   </head>
 
