--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
   <body >
     <h1>
 
-      <ins>In Progress</ins>
+      <ins>Goonga Ginga</ins>
 
     </h1>
 
     <p id = "description"><b>A site by Trevor Leong</b></p>
 
     <ul class = "nav-bar">
-      <li class ="nav-bar"><a href ="https://www.nytimes.com/" target = page1>Link1</a></li>
-      <li class ="nav-bar"><a href ="https://www.theringer.com/" target = page2>Link2</a></li>
-      <li class ="nav-bar"><a href ="https://www.omfgdogs.com/" target = page3>Link3</a></li>
-      <li class = "nav-bar"><a href ="jtester.html" target = page4>This is a test</a></li>
+      <li class ="nav-bar"><a href ="https://www.nytimes.com/" target = page1>NYtimes</a></li>
+      <li class ="nav-bar"><a href ="https://www.theringer.com/" target = page2>The Ringer</a></li>
+      <li class ="nav-bar"><a href ="https://www.omfgdogs.com/" target = page3>dogs</a></li>
+      <li class = "nav-bar"><a href ="jtester.html" target = page4>Javascript Test page</a></li>
+      <li class = "nav-bar"><a href ="experimental.html" target = page5>Ponderings</a></li>
+      <li class = "nav-bar"><a href ="blockchain.html" target = page6>blockchain</a></li>
     </ul>
 
     <!--<a href="https://www.nytimes.com/" target = "_blank">Click here!<br></a> -->
@@ -34,13 +36,10 @@
       very strange indeed
       </p>
     <div class="biography">
-      <p class="biography"> &emsp; Hello, my name is Trevor Leong, I am 18 years old and will be Attending Carnegie Mellon University in the Fall of 2019.  If you've somehow stumbled onto this site, then turn back. There is nothing to see here. While it is supposed to be a reflection of me, it certainly  As I begin to work on more and more projects, it will keep on updating. Until then, just leave.
+      <p class="biography"> &emsp; 
+        Welcome to my world of desserts!
       </p>
     </div>
-
-    
-
-  
   </body>
 
 </html>
