Test commit on 10/29/19

--- a/experimental.html
+++ b/experimental.html
@@ -17,5 +17,12 @@
             Hopefully tomorrow I will be able to maintain the level of productivity that I had today. People here are insane. 
             </p>
         </div>
+        <p class = "blogpost_date" >10/29/19</p>
+        <div class = "blogpost">
+            <p class = "blogpost" >
+                Similar to last time, excpet I bombed a midterm.
+            </p>
+        </div> 
+
     </body>
 </html>
