Fixed onlaod function

--- a/jtester.html
+++ b/jtester.html
@@ -8,7 +8,7 @@
 	 <link rel="stylesheet" "type=text/css" href="jstyle.css">
 	</head>
 
-	<body>
+	<body onload = check()>
 
 	<h1>
 		<ins>This is a test page for javascript</ins>
