--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
     <!--<a href="https://www.nytimes.com/" target = "_blank">Click here!<br></a> -->
 
-
-    <img id = "img" src="stonks.jpg" alt = "img">
+    <div class = "image_holder">
+    <img class = "image" src="stonks.jpg" alt = "img">
+    <img class = "image" src = "452.png" alt = "yes" > 
+    </div>
 
       <p id = "caption">
       "You'll float too"
