--- a/experimental.html
+++ b/experimental.html
@@ -20,7 +20,7 @@
         <p class = "blogpost_date" >10/29/19</p>
         <div class = "blogpost">
             <p class = "blogpost" >
-                Similar to last time, excpet I bombed a midterm.
+                Similar to last time, except I bombed a midterm.
             </p>
         </div> 
 
