--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <html lang = "en-US">
-    <link rel="stylesheet" type ="text/css" href="mystyle.css"> 
+    <link rel="stylesheet" type ="text/css" href="style.css"> 
     <title>Index</title>
   </head>
 
   <body >
     <h1>
-
-      <ins>Goonga Ginga</ins>
-
+      Goonga Ginga
     </h1>
 
 
