--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <html lang = "en-US">
-    <link rel="stylesheet" type ="text/css" href="style.css"> 
+    <link rel="stylesheet" type ="text/css" href="mystyle.css"> 
     <title>Index</title>
   </head>
 
