Added mroe projects and fixed weird emptiness oon left side of screen

--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
     <nav id="navbar"> 
       <div id=center>
         <ul id= "navigation">
-          <li class="list-ele"><a href="#proj1" class="nav-ele">Projects</a></li>
-          <li class="list-ele"><a href="#end" class="nav-ele">cat</a></li>
+          <li class="list-ele"><a href="#introduction" class="nav-ele">Introduction</a></li>
+          <li class="list-ele"><a href="#projs" class="nav-ele">Projects</a></li>
         </ul>
       </div>
     </nav>
+    <div id="root-container">
     <div id="welcome-section">
        <h1 id="title"> Welcome </h1>
     </div>
 
     <div id="barrier">
       <div id="barrier-text-container">
-        <div id="barrier-text"> Introduction</div>
+        <div class="barrier-text"> Introduction</div>
       </div>
     </div>
 
     <div id="introduction">
       <img src="circle-cropped.png" id="profile-pic">
       <div id="intro-text">
-        <div><t>Hello, my name is Trevor Leong and I am student at Carnegie Mellon University majoring in Computer Science, looking to concentrate in computer security and minor in Business Administration.
+        <div>Hello, my name is Trevor Leong and I am student at Carnegie Mellon University majoring in Computer Science, looking to concentrate in computer security and minor in Business Administration.
            I am passionate about blockchain technologies, and how they are being used to improve supply chains and other applications.
             My skills lay in molecular biology as well as a small amount of competitive programming and robotics, and am proficient in C++ and python.
              Currently, I am currently working on improving my web development skills, both front and back ends. 
@@ -40,30 +41,39 @@
     </div>
     <div id="barrier">
       <div id="barrier-text-container">
-        <div id="barrier-text"> Projects</div>
+        <div id="projs" class="barrier-text"> Projects</div>
       </div>
     </div>
     
     <div id="projects-holder">
       <div id="projects">
         <div class= "project-tile">
-       <a href="https://github.com/futurewitness/02-251-final-project-code"> <img src="https://resize.hswstatic.com/w_796/gif/cellular-microscopic-dna.jpg" class ="project-image"> </a> 
+          <div id="lol"><a href="https://journals.plos.org/plosgenetics/article/comments?id=10.1371/journal.pgen.1007832"> <img src="yeast.png" class ="project-image"> </a></div>
+             <div class = "bot">Detetermining the mechanism behind Mek1 regulation of Ndt80</div>
+        </div>
+        <div class= "project-tile">
+           <div id="lol"><a href="https://docs.google.com/document/d/1OGDZG_62QE_QbUu9Pfw2gDf1cPu6rRCC8jisxPk2d2o/edit?usp=sharing"> <img src="blockchain.jpg" class ="project-image"> </a> </div>
+             <div class = "bot">Building a blockchain curriculum</div>
+        </div>
+        <div class= "project-tile">
+          <div id="lol"> <a href="https://github.com/futurewitness/02-251-final-project-code"> <img src="https://resize.hswstatic.com/w_796/gif/cellular-microscopic-dna.jpg" class ="project-image"> </a> </div>
           <div id="proj1" class = "bot"> Secure sequence aligner </div>
          </div>
          <div class= "project-tile">
-       <a href="https://github.com/futurewitness/vision_experimentation"> <img src="pic.png" class="project-image"> </a> 
+          <div id="lol"><a href="https://github.com/futurewitness/vision_experimentation"> <img src="pic.png" class="project-image"> </a> </div>
           <div class = "bot"> edge detection with openCV</div>
          </div>
          <div class= "project-tile">
-       <a href="https://codepen.io/futurewitness/pen/yLOpvpE"> <img src="calc.png" class ="project-image"> </a> 
+          <div id="lol"><a href="https://codepen.io/futurewitness/pen/yLOpvpE"> <img src="calc.png" class ="project-image"> </a> </div>
           <div class = "bot">Calculator using react-redux(in progress)</div>
         </div>
       </div>
         
     <div id="end">
-        <a href="https://github.com/futurewitness" id="profile-link" target="_blank">
+      <a href="https://github.com/futurewitness" id="profile-link" target="_blank">
           <img src="github-logo.png" id="github-logo">
         </a>
+     </div>
      </div>
   </body>
 
