fixed an issue with disspaearing sections

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
        <h1 id="title"> Welcome </h1>
     </div>
 
-    <div id="barrier">
-      <div id="barrier-text-container">
+    <div class="barrier">
+      <div class="barrier-text-container">
         <div class="barrier-text"> Introduction</div>
       </div>
     </div>
@@ -35,13 +35,14 @@
            I am passionate about blockchain technologies, and how they are being used to improve supply chains and other applications.
             My skills lay in molecular biology as well as a small amount of competitive programming and robotics, and am proficient in C++ and python.
              Currently, I am currently working on improving my web development skills, both front and back ends. 
-             That being said, I am open to learning anything and am happy to meet as many people as possible
+             That being said, I am open to learning anything and am happy to meet as many people as possible.
         </div>
       </div>
     </div>
-    <div id="barrier">
-      <div id="barrier-text-container">
-        <div id="projs" class="barrier-text"> Projects</div>
+    
+    <div class="barrier">
+      <div class="barrier-text-container">
+        <div class="barrier-text"> Projects</div>
       </div>
     </div>
     
@@ -61,7 +62,7 @@
          </div>
          <div class= "project-tile">
           <div id="lol"><a href="https://github.com/futurewitness/vision_experimentation"> <img src="pic.png" class="project-image"> </a> </div>
-          <div class = "bot"> edge detection with openCV</div>
+          <div class = "bot"> Edge detection with openCV</div>
          </div>
          <div class= "project-tile">
           <div id="lol"><a href="https://codepen.io/futurewitness/pen/yLOpvpE"> <img src="calc.png" class ="project-image"> </a> </div>
