added stylistic changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav id="navbar"> 
       <div id=center>
         <ul id= "navigation">
-          <li class="list-ele"><a href="#introduction" class="nav-ele">Introduction</a></li>
+          <li class="list-ele"><a href="#intro" class="nav-ele">Introduction</a></li>
           <li class="list-ele"><a href="#projs" class="nav-ele">Projects</a></li>
         </ul>
       </div>
@@ -22,7 +22,7 @@
        <h1 id="title"> Welcome </h1>
     </div>
 
-    <div class="barrier">
+    <div id="intro" class="barrier">
       <div class="barrier-text-container">
         <div class="barrier-text"> Introduction</div>
       </div>
@@ -42,7 +42,7 @@
     
     <div class="barrier">
       <div class="barrier-text-container">
-        <div class="barrier-text"> Projects</div>
+        <div id="projs" class="barrier-text"> Projects</div>
       </div>
     </div>
     
