fixed paragraph text

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <img src="circle-cropped.png" id="profile-pic">
       <div id="intro-text">
         <div>Hello, my name is Trevor Leong and I am student at Carnegie Mellon University majoring in Computer Science, looking to concentrate in computer security and minor in Business Administration.
-           I am passionate about blockchain technologies, and how they are being used to improve supply chains and other applications.
-            My skills lay in molecular biology as well as a small amount of competitive programming and robotics, and am proficient in C++ and python.
-             Currently, I am currently working on improving my web development skills, both front and back ends. 
-             That being said, I am open to learning anything and am happy to meet as many people as possible.
+           I am passionate about blockchain technologies, with a particular interest in smart contract development. Currently, I am building projects in Solidity and rust for development on both NEAR and the Ethereum blockchain.
+           Additionally, I am honing my web development skills in the front end and back end,
+           working on imporving my skills in Flask,Node.js and React. In my free time, I like to read and explore different topics on the web. Right now, I am learning about social engineering and the non computational aspects of cybersecurity.
+
         </div>
       </div>
     </div>
