--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </ul>
       </div>
     </nav>
-    <div class="jumbotron-fluid text-center" style="height:90vh">
+    <div class="jumbotron-fluid text-center" style=" background-color:#fee7f2;height:90vh">
       <div class="col-md-5 p-lg-8 mx-auto" style="padding-top:40vh">
-        <h1 class="display-4 font-weight-normal text-dark">Welcome</h1>
+        <h1 class="display-4 font-weight-normal text-dark" style="font-family:'Segoe UI'">Welcome</h1>
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
@@ -39,9 +39,9 @@
 
         
 
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <div class=" jumbotron">
-      <div class="container">
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" >
+    <div class=" jumbotron" style="background-color: #f0e6ff">
+      <div class="container" >
         <img src="./assets/circle-cropped.png" id="profile-pic" class="rounded" alt="...">
         <h1 class="display-4">About me</h1>
         <p class="lead">My name is Trevor Leong and I am student at Carnegie Mellon University majoring in Computer Science, looking to concentrate in computer security and minor in Business Administration.
@@ -60,14 +60,14 @@
   <div class="product-device box-shadow d-none d-md-block"></div>
   <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
 </div>
-<div class="album py-5 bg-light">
-  <div class="container">
+<div class="album py-5"  style="background-color:#ffe0cc">
+  <div class="container"  >
 
-    <div class="row">
+    <div class="row" >
 
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top mx-auto" style="height:32vh; width:32vh; padding:20px" src="./assets/near-logo.png" alt="discord ">
+          <img class="card-img-top mx-auto" style= "height:32vh; width:32vh; padding:20px" src="./assets/near-logo.png" alt="discord ">
           <div class="card-body">
             <p class="card-text">Discord bot for sending NEAR to others</p>
             <div class="d-flex justify-content-between align-items-center">
