--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#projs"> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#projs">projects <span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron-fluid text-center" style=" background-color:#fee7f2;height:90vh">
       <div class="col-md-5 p-lg-8 mx-auto" style="padding-top:40vh">
-        <h1 class="display-4 font-weight-normal text-dark" style="font-family:'Segoe UI'">Happy Mother's Day!</h1>
+        <h1 class="display-4 font-weight-normal text-dark" style="font-family:'Segoe UI'">Welcome</h1>
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
@@ -42,53 +42,81 @@
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" >
     <div class=" jumbotron" style="background-color: #f0e6ff">
       <div class="container" >
-        <img src="./assets/pic00.jpg" id="profile-pic" class="rounded" alt="...">
-        <h1 class="display-4">Thanks for taking care of us all these years</h1>
-        <p class="lead"> I know it isn't much, but I still want to tahnk you for
-          all that you have done over the years for the whole family. No matter
-          what kinds of prblems we have had, whether it be related to schoolwork
-          or just about mental health, you always have words of wisdom for us to live by.  
-        </p>
+        <img src="./assets/circle-cropped.png" id="profile-pic" class="rounded" alt="...">
+        <h1 class="display-4">About me</h1>
+        <p class="lead">My name is Trevor Leong and I am student at Carnegie Mellon University majoring in Computer Science, looking to concentrate in computer security and minor in Business Administration.
+          I am passionate about blockchain technologies, with a particular interest in smart contract development. Currently, I am building projects in Solidity and rust for development on both NEAR and the Ethereum blockchain.
+          Additionally, I am honing my web development skills in the front end and back end,
+          working on improving my skills in Flask,Node.js and React. In my free time, I like to try CTFs and explore different Front-end and Back-end frameworks.</p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" >
-  <div class=" jumbotron" style="background-color: #ffc4ff">
-    <div class="container" >
-      <img src="./assets/pic3.png" id="profile-pic" class="rounded" alt="...">
-      <h1 class="display-4">Even at our worst, you help us see our flaws</h1>
-      <p class="lead">
-          To have people around you that are not afraid of giving feedback
-          without dear of offending this person. As someone who has made and continues
-          to make a mistakes, this feedback is invaluable.   
-      </p>
+<div id="projs" class="jumbotron-fluid text-center" style="padding-top:10vh; padding-bottom:10vh">
+  <div class="col-md-5 p-lg-8 mx-auto">
+    <h1 class="display-4 font-weight-normal">Projects</h1>
+  </div>
+  <div class="product-device box-shadow d-none d-md-block"></div>
+  <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+</div>
+<div class="album py-5"  style="background-color:#ffe0cc">
+  <div class="container"  >
+
+    <div class="row" >
+
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top mx-auto" style= "height:32vh; width:32vh; padding:20px" src="./assets/near-logo.png" alt="discord ">
+          <div class="card-body">
+            <p class="card-text">Discord bot for sending NEAR to others</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+              </div>
+              <small class="text-muted">In progress</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top mx-auto" style="height:32vh; width:32vh; padding:20px"   src="./assets/blockchain.jpg" alt="Blockchain curriculum">
+          <div class="card-body">
+            <p class="card-text">Blockchain curriculum </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+              </div>
+              <small class="text-muted">Complete</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+          <img class="card-img-top mx-auto" style="height:32vh; width:32vh; padding:20px" src="./assets/rainbow-logo.png" alt="MDFMA">
+          <div class="card-body">
+            <p class="card-text">Multipurpose Distributed Fund Management App</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+              </div>
+              <small class="text-muted">In progress</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
-
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" >
-  <div class=" jumbotron" style="background-color: #ff90be">
-    <div class="container" >
-      <img src="./assets/pic2.png" id="profile-pic" class="rounded" alt="...">
-      <h1 class="display-4">You are a part of all our successes</h1>
-      <p class="lead">
-          Through your hard work as both a CPA and mother, you have helped
-          guide Ariel and myself to many successes. Without you driving us
-          and giving us the guidance, we would not bet the people who we
-          are today. Hopefully I can treat you to a nice dinner when I get
-          my first paycheck!
-      </p>
-    </div>
-  </div>
-</div>
-
 </div>
 
 <footer class="text-muted">
   <div class=" container" style="margin-top:5vh; margin-bottom:5vh">
-    <p class = "text-center"> Made with love by Trevor, Robert and Dingus</p>
+    <p class = "text-center"> Based on various Bootstrap examples</p>
   </div>
 </footer>
     
