--- a/background.html
+++ b/background.html
@@ -26,18 +26,11 @@
 
 			<div class="pl-4">
 				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl" href="#">
-					Minimal Blog
+					Just another site
 				</a>
 			</div>
 
-			<div class="block lg:hidden pr-4">
-				<button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-green-500 appearance-none focus:outline-none">
-					<svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<title>Menu</title>
-						<path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-					</svg>
-				</button>
-			</div>
+			
 			<!--Navigation bar--> 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
@@ -68,8 +61,9 @@
             
 			<!--Title-->
 			<div class="font-sans">
-						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Welcome to Minimal Blog</h1>
-						<p class="text-sm md:text-base font-normal text-gray-600">Published 19 February 2019</p>
+						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
+							Background
+						</h1>
 			</div>
             <hr width=100%>
 
@@ -77,28 +71,25 @@
 			<!--Lead Para-->
 			<div class = "w-full  flex flex-col content-between justify-between p-12 ">
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-                    Relevant Coursework
+                    Coursework
                 </h2>
-                <hr>
-                <div class=" bg-blue-100 h-64 flex flex-col my-3">
-                    <img class="w-full h-full p-8" src="./assets/near-logo.svg">
-                </div>
-                <p class="py-6">
-                    The basic blog page layout is available and all using the default Tailwind CSS classes
-                     (although there are a few hardcoded style tags). If you are going to use this in your project,
-                      you will want to convert the classes into components. Click <a class='text-red-400 hover:bg-blue-100 hover:text-underline' href='./projects/p1.html'>Here</a>  to find out more.
+				<p class="py-6">
+                    List coming soon
                 </p>
+                <hr>
+                
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
                     Relevant projects
                 </h2>
                 <hr>
+				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-2xl">
+                    Distributed Fund Manager
+                </h2>
                 <div class=" bg-blue-100 h-64 flex flex-col my-3">
                     <img class="w-full h-full p-8" src="./assets/near-logo.svg">
                 </div>
                 <p class="py-6">
-                    The basic blog page layout is available and all using the default Tailwind CSS classes
-                     (although there are a few hardcoded style tags). If you are going to use this in your project,
-                      you will want to convert the classes into components. Click <a class='text-red-400 hover:bg-blue-100 hover:text-underline' href='./projects/p1.html'>Here</a>  to find out more.
+                    Description coming soon
                 </p>
                 <hr>
             </div>
@@ -107,41 +98,6 @@
 	</div>
 	<!--/container-->
 
-	<footer class="bg-white border-t border-gray-400 shadow ">
-		<div class="container max-w-4xl mx-auto flex py-8">
-
-			<div class="w-full mx-auto flex flex-wrap">
-				<div class="flex w-full md:w-1/2 ">
-					<div class="px-8">
-						<h3 class="font-bold text-gray-900">About</h3>
-						<p class="py-4 text-gray-600 text-sm">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel mi ut felis tempus commodo nec id erat. Suspendisse consectetur dapibus velit ut lacinia.
-						</p>
-					</div>
-				</div>
-
-				<div class="flex w-full md:w-1/2">
-					<div class="px-8">
-						<h3 class="font-bold text-gray-900">Social</h3>
-						<ul class="list-reset items-center text-sm pt-3">
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-
-
-		</div>
-	</footer>
 
 	<script>
 
