--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<a class="inline-block text-gray-900 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 font-bold">Home</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projects.html">Current Projects</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projects.html">What I'm doing now</a>
 					</li>
 					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./background.html"> Background</a>
@@ -84,8 +84,8 @@
 				It is important to note that this site, like me, is constantly evolving, so I apologize for any drastic changes.
 				That being said, I will primarily be talking about my coursework and relevant projects in software development and
 				cybersecurity, as it is currently what interests me the most. While I will not be posting any code from any courses
-				to avoid a potential Academic Integrity violation, I will provide code from projects to hopefully reflect the work I 
-				have done for these courses.  
+				to avoid a potential Academic Integrity violation, I will provide github links to some personal projects that hopefully reflect the work I 
+				have done for these courses.   
 			</p>
 				
 
@@ -125,41 +125,6 @@
 	</div>
 	<!--/container-->
 
-	<footer class="bg-white border-t border-gray-400 shadow">
-		<div class="container max-w-4xl mx-auto flex py-8">
-
-			<div class="w-full mx-auto flex flex-wrap">
-				<div class="flex w-full md:w-1/2 ">
-					<div class="px-8">
-						<h3 class="font-bold text-gray-900">About</h3>
-						<p class="py-4 text-gray-600 text-sm">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel mi ut felis tempus commodo nec id erat. Suspendisse consectetur dapibus velit ut lacinia.
-						</p>
-					</div>
-				</div>
-
-				<div class="flex w-full md:w-1/2">
-					<div class="px-8">
-						<h3 class="font-bold text-gray-900">Social</h3>
-						<ul class="list-reset items-center text-sm pt-3">
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-							<li>
-								<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-1" href="#">Add social link</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-
-
-		</div>
-	</footer>
 
 	<script>
 		/* Progress bar */
