--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#"> Learning Resources</a>
 					</li>
 					<li class="mr-3">
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projectproposal.html">Project Proposal</a>
+					</li>
+					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">Other</a>
 					</li>
+					
 				</ul>
 			</div>
 		</div>
