--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,9 @@
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#"> Learning Resources</a>
 					</li>
 					<li class="mr-3">
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="./projectproposal.html">Project Proposal</a>
+					</li>
+					<li class="mr-3">
 						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">Other</a>
 					</li>
 				</ul>
