changed TailwindCSS cdn link

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -8,10 +8,7 @@
     <meta name="author" content="name" />
     <meta name="description" content="description here" />
     <meta name="keywords" content="keywords,here" />
-    <link
-      href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+	<script src="https://cdn.tailwindcss.com"></script>
     <!--Replace with your tailwind.css once created-->
   </head>
 
@@ -76,26 +73,29 @@
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1EX1hSq8bbL_jEUryliR0o2_a9TxVortZ/view?usp=sharing">PDF of Project Proposal</a>
 				</h2>
-                <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					First project Milestone February 15th
+				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
+					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1et8at0wFwtcq2rgBJEGwD6xaNJtsLGim/view?usp=sharing">PDF of First Project Milestone</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Second Biweekly Milestone March 1st
+					Second project Milestone February 15th
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Third Biweekly Milestone March 15th
+					Third Biweekly Milestone March 1st
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Fourth Biweekly Milestone March 29th
+					Fourth Biweekly Milestone March 15th
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Fifth Biweekly Milestone April 12th
+					Fifth Biweekly Milestone March 29th
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Sixth Biweekly Milestone Arpil 26th
+					Sixth Biweekly Milestone April 12th
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					Seventh Biweekly Milestone May 10th
+					Seventh Biweekly Milestone Arpil 26th
+				</h2>
+                <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
+					Eigth Biweekly Milestone May 10th
 				</h2>
 
 
