--- a/projectproposal.html
+++ b/projectproposal.html
@@ -74,7 +74,10 @@
 					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1EX1hSq8bbL_jEUryliR0o2_a9TxVortZ/view?usp=sharing">PDF of Project Proposal</a>
 				</h2>
 				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1et8at0wFwtcq2rgBJEGwD6xaNJtsLGim/view?usp=sharing">PDF of First Project Milestone</a>
+					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1et8at0wFwtcq2rgBJEGwD6xaNJtsLGim/view?usp=sharing">PDF of final 07-300 Project Milestone</a>
+				</h2>
+				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
+					<a class="hover:text-indigo-600" href="https://www.notion.so/Milestone-1-31-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-515171b88c394694ac7fc90b3f17df5c">First Project Milestone January 31</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Second project Milestone February 15th
