--- a/projectproposal.html
+++ b/projectproposal.html
@@ -77,7 +77,7 @@
 					<a class="hover:text-indigo-600" href="https://drive.google.com/file/d/1et8at0wFwtcq2rgBJEGwD6xaNJtsLGim/view?usp=sharing">PDF of final 07-300 Project Milestone</a>
 				</h2>
 				<h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
-					<a class="hover:text-indigo-600" href="https://www.notion.so/Milestone-1-31-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-515171b88c394694ac7fc90b3f17df5c">First Project Milestone January 31</a>
+					<a class="hover:text-indigo-600" href="https://humane-clerk-548.notion.site/Milestone-1-31-Investigate-potential-smart-contract-pitfalls-to-analyze-and-approaches-on-how-to-fi-515171b88c394694ac7fc90b3f17df5c">First Project Milestone January 31</a>
 				</h2>
                 <h2 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">
 					Second project Milestone February 15th
